--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,6 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardBackgroundColor="@color/white"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="-30dp"
         app:cardCornerRadius="30dp">
@@ -45,10 +44,10 @@
                 android:id="@+id/shownomore"
                 android:orientation="vertical">
                 <ImageView
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
                     android:layout_gravity="center"
-                    android:src="@drawable/scan"
+                    android:src="@drawable/qr_code_scanner"
                     android:layout_marginTop="50dp"/>
 
                 <androidx.cardview.widget.CardView
