--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -5,5 +5,6 @@
         <item name="colorPrimary">@color/green</item>
         <item name="colorSecondary">@color/green</item>
         <item name="android:colorAccent">@color/orange</item>
+        <item name="android:textColorTertiary">@color/white</item>
     </style>
 </resources>
